hero image changed

--- a/src/ProjectsData.json
+++ b/src/ProjectsData.json
@@ -11,7 +11,7 @@
     },
     {
         "id": 2,
-        "img": "https://i.ibb.co/QKh5hFr/Project2.png",
+        "img": "https://i.ibb.co/bRzwy2P/gnome-shell-screenshot-atfmyh.png",
         "title": "Laptop Gizmo",
         "desc": "It's a tools website where you will find different parts of laptop which you can buy.Login, Registration via email password or social login(google).Both users and admin will be able to access the dashboard. Admin can add new product, manage users, delete products.",
         "loginInfo": "To Login on my site , use 'parvez.rahman100@gmail.com' as email and password is '123456' ",
@@ -31,7 +31,7 @@
     },
     {
         "id": 4,
-        "img": "https://i.ibb.co/kg8dZYv/Project4.png",
+        "img": "https://i.ibb.co/QQ4R422/Screenshot-from-2022-05-26-20-24-08.png",
         "title": "Perfumes Granary",
         "desc": "It's a kind of e-commerce website where you will find different perfumes which you can buy.Login, Registration via email password or social login(google).You can add products, Order Products.",
         "loginInfo": "To Login on my site , use 'parvez.rahman100@gmail.com' as email and password is '123456' ",
