project details page complete

--- a/src/ProjectsData.json
+++ b/src/ProjectsData.json
@@ -1,17 +1,42 @@
 [
     {
-        "id": 1,
-        "img": "https://i.ibb.co/2sLYnGc/Project1.png",
+        "img": "https://i.ibb.co/j8wDRP6/Project1.png",
+        "img1": "https://i.ibb.co/KNzjzKj/Project1-1.png",
+        "img2": "https://i.ibb.co/wKXqDgN/Project1-2.png",
+        "img3": "https://i.ibb.co/vj71P15/Projects1-3.png",
+        "img4": "https://i.ibb.co/dGL5dss/Project1-4.png",
+        "img5": "https://i.ibb.co/3k3fnBS/Project1-5.png",
+        "img6": "https://i.ibb.co/BTSxtP8/Project1-6.png",
         "title": "Alumni Association",
-        "desc": "Descriptions are here",
-        "loginInfo": "To Login on my site , use 'parvez.rahman100@gmail.com' as email and password is '123456' ",
+        "desc": "Alumni Association is a based ex student of tejgaon college. Where ex student can login/signup via registration number. Can see other students info and also can post job offer. Communication system will be added soon.",
+        "loginInfo": "To Login on my site , use 'iamparvezrahman@gmail.com' as email and password is '123456' ",
         "live": "https://alumni-association-4e4ae.web.app/",
         "ClientCode": "https://github.com/Parvez-Rahman100/alumni-association-client.git",
         "serverCode": "https://github.com/Parvez-Rahman100/alumni-association-server.git"
     },
     {
-        "id": 2,
-        "img": "https://i.ibb.co/bRzwy2P/gnome-shell-screenshot-atfmyh.png",
+        "img": "https://i.ibb.co/R9DnyhN/Project2.png",
+        "img1": "https://i.ibb.co/nR2whcp/Project2-1.png",
+        "img2": "https://i.ibb.co/qyRqkWt/Project2-2.png",
+        "img3": "https://i.ibb.co/z5sjY93/Project2-3.png",
+        "img4": "https://i.ibb.co/3RHSsL4/Project2-4.png",
+        "img5": "https://i.ibb.co/TcmHDvj/Project2-5.png",
+        "img6": "https://i.ibb.co/CMvRmMJ/Project2-6.png",
+        "title": "Coders Clinic",
+        "desc": "This is a group project.Where I contribute a lot. Through this project I have learned a lot about git management. This website based on online problem solving platform",
+        "loginInfo": "You can login/signup by social media ",
+        "live": "https://coders-clinic-fc76f.web.app/",
+        "ClientCode": "https://github.com/akilinjamam/coders-clinic",
+        "serverCode": ""
+    },
+    {
+        "img": "https://i.ibb.co/S0nL8fF/Project3.png",
+        "img1": "https://i.ibb.co/QFWjLgV/Project3-1.png",
+        "img2": "https://i.ibb.co/jWxS9d9/Project3-2.png",
+        "img3": "https://i.ibb.co/ZNpTddn/Project3-3.png",
+        "img4": "https://i.ibb.co/0nbV1yz/Project3-4.png",
+        "img5": "https://i.ibb.co/LzvN0mr/Project3-5.png",
+        "img6": "https://i.ibb.co/Dzt1c5N/Project3-6.png",
         "title": "Laptop Gizmo",
         "desc": "It's a tools website where you will find different parts of laptop which you can buy.Login, Registration via email password or social login(google).Both users and admin will be able to access the dashboard. Admin can add new product, manage users, delete products.",
         "loginInfo": "To Login on my site , use 'parvez.rahman100@gmail.com' as email and password is '123456' ",
@@ -20,18 +45,13 @@
         "serverCode": "https://github.com/Parvez-Rahman100/laptop-gizmo-server"
     },
     {
-        "id": 3,
-        "img": "https://i.ibb.co/JK7f9qL/Project3.png",
-        "title": "Coders Clinic",
-        "desc": "This is a group project.",
-        "loginInfo": "To Login on my site , use 'parvez.rahman100@gmail.com' as email and password is '123456' ",
-        "live": "https://coders-clinic-fc76f.web.app/",
-        "ClientCode": "https://github.com/akilinjamam/coders-clinic",
-        "serverCode": ""
-    },
-    {
-        "id": 4,
-        "img": "https://i.ibb.co/QQ4R422/Screenshot-from-2022-05-26-20-24-08.png",
+        "img": "https://i.ibb.co/rxgpc8x/Project4.png",
+        "img1": "https://i.ibb.co/86NKQnx/Project4-1.png",
+        "img2": "https://i.ibb.co/D1hb2t2/Project4-2.png",
+        "img3": "https://i.ibb.co/HpBCbrk/Project4-3.png",
+        "img4": "https://i.ibb.co/Q6sGJPj/Project4-4.png",
+        "img5": "https://i.ibb.co/JcxNYpn/Project4-5.png",
+        "img6": "https://i.ibb.co/SK9rFRt/Project4-6.png",
         "title": "Perfumes Granary",
         "desc": "It's a kind of e-commerce website where you will find different perfumes which you can buy.Login, Registration via email password or social login(google).You can add products, Order Products.",
         "loginInfo": "To Login on my site , use 'parvez.rahman100@gmail.com' as email and password is '123456' ",
